--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^1.6.7",
     "express": "^4.18.2",
-    "express-ws": "^5.0.2"
+    "express-ws": "^5.0.2",
+    "redis": "^4.6.13"
   }
 }
