--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "eslintConfig": {},
   "dependencies": {
     "axios": "^1.6.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.18.2",
     "express-ws": "^5.0.2",
     "redis": "^4.6.13"
