--- a/.env
+++ b/.env
@@ -1,8 +1,10 @@
+#Server Secret
 SERVER_NETWORK_SOCKET_PORT=3002
 
 #Docker Secret to locate the listening port.
-DOCKER_CONTAINER_PORT=46464
+DOCKER_CONTAINER_NAME=192.168.16.2
+DOCKER_CONTAINER_PORT=6379
 
 #Redis Secret for Authentication.
 REDIS_USER_NAME=MPC_Redis_Chat_Database
-REDIS_USER_PASSWORD=@1h@r_+dP2__w0rDd!d4$!@!ASlDF#D##F$#$A5SE!#@#!$%ASDFASDBVXJcffaa___1!3
+REDIS_USER_PASSWORD=asdfASDF1234!@#$
