--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "mpc_node-wschat_server",
+  "name": "mpc_node_websocket_chat_server",
   "version": "0.0.0",
-  "description": "MPC_NodeWSChat_Server",
-  "main": "app.js",
+  "description": "MPC Nodejs Websocket Server",
+  "main": "mpc_node_websocket_chat_server.js",
   "author": {
     "name": ""
   },
@@ -10,6 +10,9 @@
     "eslint": "^8.21.0"
   },
   "eslintConfig": {},
+  "scripts": {
+    "start": "node mpc_node_websocket_chat_server.js"
+  },
   "dependencies": {
     "axios": "^1.6.7",
     "cors": "^2.8.5",
