--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "name": ""
   },
   "devDependencies": {
-    "eslint": "^8.21.0"
+    "eslint": "^8.21.0",
+    "ioredis-mock": "^8.9.0",
+    "jest": "^29.7.0",
+    "supertest": "^7.1.0"
   },
   "eslintConfig": {},
   "scripts": {
     "start": "node mpc_node_websocket_chat_server.js"
   },
   "dependencies": {
-    "axios": "^1.6.7",
+    "axios": "^1.8.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.18.2",
